hphp/hack/test/typecheck/ffp/function_await_alias.php.exp
File "function_await_alias.php", line 6, characters 23-33:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
